--- a/saleapp/app/templates/index.html
+++ b/saleapp/app/templates/index.html
@@ -3,15 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <title>Trang chu</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"/>
 </head>
 <body>
-    <h1>E-commerce Website!</h1>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">E-commerce Website!</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Home</a>
+                </li>
+                {% for c in categories %}
+                <li class="nav-item">
+                    <a class="nav-link" href="/?category_id={{c.id}}">{{c.name}}</a>
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
+    </div>
+</nav>
+<main class="container">
+    {% if products%}
+    <div class="row">
+        {%for p in products %}
+        <div class="col-md-3 col-12 p-2">
+            <div class="card">
+                <img class="card-img-top" src="{{p.image}}" alt="{{p.name}}">
+                <div class="card-body">
+                    <h4 class="card-title">{{p.name}}</h4>
+                    <p class="card-text">{{p.price}} VND</p>
+                    <a href="#" class="btn btn-primary">Xem chi tiet</a>
+                    <button class="btn btn-danger">
+                        Đặt hàng
+                    </button>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+    {% else %}
+    <div class="alert alert-info">Khong co</div>
+    {% endif %}
 
-    <ul>
-    {% for i in range(10) %}
-        <li>2 * {{ i }} = {{ 2*i }}</li>
-    {% endfor %}
-    </ul>
+</main>
+
 </body>
 </html>
