--- a/saleapp/app/templates/index.html
+++ b/saleapp/app/templates/index.html
@@ -1,37 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Trang chu</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"/>
-</head>
-<body>
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">E-commerce Website!</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Home</a>
-                </li>
-                {% for c in categories %}
-                <li class="nav-item">
-                    <a class="nav-link" href="/?category_id={{c.id}}">{{c.name}}</a>
-                </li>
-                {% endfor %}
-            </ul>
-        </div>
-    </div>
-</nav>
-<main class="container">
+{% extends 'layout/base.html'%}
+
+
+{% block content%}
+ <ul class="pagination mt-1">
+          {%for i in range (1,page+1) %}
+            <li class="page-item"><a class="page-link" href="/?page={{i}}">{{i}}</a></li>
+          {% endfor %}
+    </ul>
+
     {% if products%}
     <div class="row">
         {%for p in products %}
@@ -54,7 +30,4 @@
     <div class="alert alert-info">Khong co</div>
     {% endif %}
 
-</main>
-
-</body>
-</html>
+{%endblock%}
