--- a/saleapp/app/templates/index.html
+++ b/saleapp/app/templates/index.html
@@ -13,7 +13,7 @@
 
     <div class="container" data-aos-delay="100">
 
-        <form action="forms/appointment.php" method="post" role="form" class="php-email-form">
+        <form action="/" method="post" role="form" class="php-email-form">
             <div class="row">
                 <div class="col-md-4 form-group">
                     <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required="">
@@ -41,10 +41,10 @@
                 </div>
                 <div class="col-md-4 form-group mt-3">
                     <select name="time" id="time" class="form-select" required="">
-                        <option value="">Select Doctor</option>
-                        <option value="Doctor 1">Doctor 1</option>
-                        <option value="Doctor 2">Doctor 2</option>
-                        <option value="Doctor 3">Doctor 3</option>
+                        <option value="">Time</option>
+                        {% for t in time_frames%}
+                            <option value="{{t.time}}">{{t.time}}</option>
+                        {%endfor%}
                     </select>
                 </div>
             </div>
