--- a/saleapp/app/templates/layout/base.html
+++ b/saleapp/app/templates/layout/base.html
@@ -58,5 +58,6 @@
 {%block footer%}
 {% include 'layout/footer.html' %}
 {% endblock %}
+    <script src="{{ url_for('static', filename='js/main.js') }}"></script
 </body>
 </html>
