--- a/saleapp/app/templates/taoDon.html
+++ b/saleapp/app/templates/taoDon.html
@@ -6,6 +6,8 @@
     <title>Phiếu Khám Bệnh</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
+
 <body>
     <div class="container mt-5">
         <div class="card">
@@ -13,7 +15,7 @@
                 <h4>Phiếu Khám Bệnh</h4>
             </div>
             <div class="card-body">
-                <form method="POST" action="/taoDon"  >
+                <form method="POST" action="/taoDon/{{patient_id}}/{{date}}"  >
                     <div class="mb-3">
                         <label  class="form-label">Họ và tên</label>
                         <div>{{name.name}}</div>
@@ -26,7 +28,7 @@
 <!--                            </div>-->
 <!--                        </div>-->
                     <div class="mb-3">
-                        <label for="ngayKham" class="form-label">Ngày khám</label>
+                        <label class="form-label">Ngày khám</label>
 <!--                        <input type="date" class="form-control" name ="ngayKham" id="ngayKham">-->
                         <div>{{date}}</div>
                     </div>
@@ -56,20 +58,20 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td>1</td>
-                                    <td>Thuốc A</td>
-                                    <td>Viên</td>
-                                    <td>10</td>
-                                    <td>Uống sau ăn</td>
-                                </tr>
-                                <tr>
-                                    <td>2</td>
-                                    <td>Thuốc B</td>
-                                    <td>Lọ</td>
-                                    <td>1</td>
-                                    <td>Nhỏ mũi</td>
-                                </tr>
+<!--                                <tr>-->
+<!--                                    <td>1</td>-->
+<!--                                    <td>Thuốc A</td>-->
+<!--                                    <td>Viên</td>-->
+<!--                                    <td>10</td>-->
+<!--                                    <td>Uống sau ăn</td>-->
+<!--                                </tr>-->
+<!--                                <tr>-->
+<!--                                    <td>2</td>-->
+<!--                                    <td>Thuốc B</td>-->
+<!--                                    <td>Lọ</td>-->
+<!--                                    <td>1</td>-->
+<!--                                    <td>Nhỏ mũi</td>-->
+<!--                                </tr>-->
                             </tbody>
                         </table>
                     </div>
@@ -98,9 +100,16 @@
                                 <!-- Search results will be displayed here -->
                             </div>
                         </div>
-                        <div class="mb-3">
-                            <label for="drugUnit" class="form-label">Đơn vị</label>
-                            <input type="text" class="form-control" id="drugUnit" placeholder="Nhập đơn vị">
+<!--                        <div class="mb-3">-->
+<!--                            <label for="drugUnit" class="form-label">Đơn vị</label>-->
+<!--                            <input type="text" class="form-control" id="drugUnit" placeholder="Nhập đơn vị">-->
+<!--                        </div>-->
+                        <div class="col-md-4 form-group mt-3">
+                            <select name="drugUnit" id="drugUnit" class="form-select" required="">
+                            {% for unit in unit_medicine%}
+                                    <option value="{{unit.id}}">{{unit.unit}}</option>
+                            {%endfor%}
+                            </select>
                         </div>
                         <div class="mb-3">
                             <label for="drugQuantity" class="form-label">Số lượng</label>
@@ -226,4 +235,7 @@ document.getElementById('medicalForm').addEventListener('submit', function(event
         }
     </style>
 </body>
+
+
+
 </html>
