--- a/saleapp/app/templates/patientList.html
+++ b/saleapp/app/templates/patientList.html
@@ -39,7 +39,7 @@
                 <td>{{ record[1] }}</td>
                 <td>{{ record[2] }}</td>
                 {%if record[3]%}
-                    <td>{{ record[3].strftime('%Y-%m-%d') }}</td>
+                    <td>{{ record[3].strftime('%d-%m-%Y') }}</td>
                 {%else%}
                     <td>No information</td>
                 {%endif%}
